Register as a user a service provider, login and  authorization on rails

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,8 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=27017
 USER_PICTURES=../client/public/users-profile-pics/
+
+
+# JWT Config
+secret=secret
+expirationDate=2d
