--- a/server/.env.example
+++ b/server/.env.example
@@ -6,3 +6,4 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=27017
 USER_PICTURES=../client/public/users-profile-pics/
+BING_KEY=AuZm6yHaR5NxoRBbs2rRaQUyAKTYyMv40RraR8Ura2FyFSXst_T80vlQd3FgTir6
