--- a/server/package.json
+++ b/server/package.json
@@ -17,8 +17,9 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mongoose": "^5.9.18",
-    "multer": "^1.4.2",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
