--- a/client/package.json
+++ b/client/package.json
@@ -6,22 +6,23 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "push.js": "^1.0.12",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "node-sass": "^4.14.1",
+    "push.js": "^1.0.12",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dropdown-select": "^4.4.1",
     "react-hook-form": "^5.7.2",
     "react-js-search": "^0.3.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
     "react-select": "^3.1.0",
     "react-toastify": "^6.0.5",
     "reactstrap": "^8.4.1",
     "semantic-ui-react": "^0.88.2",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
     "socket.io-client": "^2.3.0"
   },
   "scripts": {
