--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "react-dropdown-select": "^4.4.1",
     "react-hook-form": "^5.7.2",
     "react-js-search": "^0.3.0",
+    "react-loading": "^2.0.3",
     "react-rating-stars-component": "^1.1.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
