--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-star-ratings": "^2.3.0",
     "react-toastify": "^6.0.5",
     "react-validation": "^3.0.7",
     "reactstrap": "^8.4.1",
