--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "formik": "^2.1.4",
+    "mdbreact": "^4.27.0",
     "node-sass": "^4.14.1",
     "push.js": "^1.0.12",
     "react": "^16.13.1",
