--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
+    "antd": "^4.3.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "formik": "^2.1.4",
@@ -26,6 +27,7 @@
     "react-js-search": "^0.3.0",
     "react-loading": "^2.0.3",
     "react-rating-stars-component": "^1.1.0",
+    "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
@@ -33,6 +35,9 @@
     "react-toastify": "^6.0.5",
     "react-validation": "^3.0.7",
     "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "socket.io-client": "^2.3.0",
     "validator-react": "^1.0.3",
     "yup": "^0.29.1"
