--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
