--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "mongoose": "^5.9.18",
@@ -21,9 +22,11 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
+    "object-to-formdata": "^3.0.9",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "socket.io": "^2.3.0",
+    "stripe": "^8.67.0",
     "validator": "^13.0.0"
   }
 }
