--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-dropdown-select": "^4.4.1",
+    "react-google-login": "^5.1.20",
     "react-hook-form": "^5.7.2",
     "react-images-upload": "^1.2.8",
     "react-js-search": "^0.3.0",
