--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-moment": "^0.9.7",
     "react-rating-stars-component": "^1.1.0",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.8",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
