--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "formidable": "^1.2.2",
@@ -31,5 +31,8 @@
     "socket.io": "^2.3.0",
     "stripe": "^8.67.0",
     "validator": "^13.0.0"
+  },
+  "devDependencies": {
+    "dotenv": "^8.2.0"
   }
 }
