fixing some issues

--- a/server/.env.example
+++ b/server/.env.example
@@ -6,7 +6,10 @@ DB_USERNAME=root
 DB_PASSWORD=
 DB_PORT=27017
 USER_PICTURES=../client/public/users-profile-pics/
-
+GMAIL_USER=wasalywasaly25@gmail.com
+GMAIL_PASS=wasaly1234
+GOOGLE_CLIENT_ID=44992786123-93hnb2v0782ce3iml5ngqtqfqeqsgm5o.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=BDIwb2EDidfKgYjEFriYZWni
 # Bing Maps key
 BING_KEY=AuZm6yHaR5NxoRBbs2rRaQUyAKTYyMv40RraR8Ura2FyFSXst_T80vlQd3FgTir6
 
